fixed the body overflow and made modal windows for contact and about us

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,12 @@ html, body{
     height: 100vh;
     margin: 0.1%;
     font-family: Cambria;
+    overflow: hidden;
     -webkit-font-smoothing: antialiased; 
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility !important;
 }
 #search{
-    /* width: 50%; */
     display: flex;
     flex:1;
     margin: 1% auto;
@@ -15,22 +15,23 @@ html, body{
     align-items: center;
 }
 button{
-    /* display: block; */
     display: table-cell;
     padding: 0.73% 1%;
     min-height: 5vh;
     border-color: white;
     background-color:white;
 }
-p{
+p.about{
+    min-width: 22vw;
     padding: 0.3%;
     position: absolute;
     z-index: -1;
     opacity: 0;
-    bottom: 0;
+    bottom: -15px;
     left:0;
 }
-p:hover{
+
+p.about:hover{
     opacity: 100%;
     z-index: 1;
     background-color: red;
@@ -40,17 +41,10 @@ h2:active{
     opacity: 0;
 }
 
-h2:active + p{
+h2:active + p.about{
     opacity: 100%;
     z-index: 1;
 }
-
-/* h2.about:hover ~ p.about{
-    opacity: 100%;
-}
-h2.contact:hover ~ p.contact{
-    opacity: 100%;
-} */
 
 div#info{
     background-color: darkblue;
@@ -62,14 +56,14 @@ div#info{
     bottom: 0;
     left:0;
 }
+#info>h2{
+    margin: auto 1%;
+}
+
 
 #s-bar{
     min-height: 5vh;
-    /* position: relative; */
-    /* margin: 1% auto; */
-    /* margin-right: 0; */
     padding: 0;
-    /* height: 100%; */
     font-size: larger;
 }
 
@@ -170,6 +164,7 @@ figcaption{
         /* flex: 0 1 100vw; */
         padding: 0 35%;
         height: 100%;
+        max-height: 65vh;
         /* margin-top: 2%; */
     }
     
@@ -269,8 +264,9 @@ h1{
 .modal{
     /*display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    display: flex;
-    align-items: center;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
@@ -279,18 +275,31 @@ h1{
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  #moTable{
+}
+#moTable{
     background-color: red;
     border-radius: 12px;
     opacity: 100%;
-    margin: 4% auto;
     padding: 4%;
-    position: relative;
     font-size: larger;
-    /* top: 50%;
-    left:50%; */
-    /* align-self: center; */
     width: 60%;
     height: 70%;
-  }
+    position: absolute;                 /*per ta qenderzuar*/
+    top: 45%;                           
+    left: 50%;
+    transform: translate( -50%, -50%);
+}
+
+.modal>div{
+    width: 60%;
+    padding: 3%;
+    padding-top: 2.5%;
+    max-height: 60vh;
+    border-radius: 8px;
+    background-color: red;
+    position: absolute;                 /*per ta qenderzuar*/
+    top: 45%;                           /*pak me lart se qendra*/                           
+    left: 50%;
+    transform: translate( -50%, -50%);
+
+}
